--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ requests-oauthlib==0.7.0
 six==1.10.0
 sqlparse==0.1.19
 tablib==0.11.2
+tweepy==3.5.0
 tweetpy==0.1
 update-checker==0.13
 Werkzeug==0.11.11
