add action on click

--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -22,6 +22,8 @@
   },
   "permissions": [
     "clipboardRead",
-    "contextMenus"
+    "contextMenus",
+    "debugger",
+    "notifications"
   ]
 }
