--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ requests==2.10.0
 requests-oauthlib==0.7.0
 scipy==0.18.1
 six==1.10.0
+SPARQLWrapper==1.7.6
 sqlparse==0.1.19
 tablib==0.11.2
 tweepy==3.5.0
