--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -20,6 +20,21 @@
     "default_title": "browser action demo",
     "default_popup": "src/browser_action/browser_action.html"
   },
+  "content_scripts": [
+    {
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "css": [
+        "css/content_script.css"
+      ],
+      "js": [
+        "js/jquery.js",
+        "src/content_scripts/content_script.js"
+      ]
+    }
+  ],
   "permissions": [
     "clipboardRead",
     "contextMenus",
