--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ djangorestframework-jwt==1.8.0
 drfdocs==0.0.11
 facepy==1.0.8
 gunicorn==19.6.0
+isodate==0.5.4
 Jinja2==2.8
+keepalive==0.5
 Markdown==2.6.6
 MarkupSafe==0.23
 nltk==3.2.1
@@ -29,8 +31,10 @@ psycopg2==2.6.2
 py-bcrypt==0.4
 Pygments==2.1.3
 PyJWT==1.4.0
+pyparsing==2.1.10
 python-dateutil==2.5.3
 pytz==2016.4
+rdflib==4.2.1
 requests==2.10.0
 requests-oauthlib==0.7.0
 scipy==0.18.1
